// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render valid active ExifOverlay component. 1`] = `
.c0 {
  background: linear-gradient( 0, rgba(0,0,0,1) 0%, rgba(200,200,200,0) 100% );
  bottom: 0;
  color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: sans-serif;
  font-size: 0.9rem;
  font-variant: small-caps;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  opacity: 1;
  padding: 10px;
  position: absolute;
  text-align: right;
  text-shadow: 0 0 4px #000;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
  width: 100%;
}

<div
  className="c0"
>
  Shot with a camera
</div>
`;

exports[`Render valid inactive ExifOverlay component. 1`] = `
.c0 {
  background: linear-gradient( 0, rgba(0,0,0,1) 0%, rgba(200,200,200,0) 100% );
  bottom: 0;
  color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: sans-serif;
  font-size: 0.9rem;
  font-variant: small-caps;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  opacity: 0;
  padding: 10px;
  position: absolute;
  text-align: right;
  text-shadow: 0 0 4px #000;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
  width: 100%;
}

<div
  className="c0"
>
  Shot with a camera
</div>
`;

exports[`Rendering ExifOverlay w/out any text is empty div. 1`] = `
.c0 {
  background: linear-gradient( 0, rgba(0,0,0,1) 0%, rgba(200,200,200,0) 100% );
  bottom: 0;
  color: white;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: sans-serif;
  font-size: 0.9rem;
  font-variant: small-caps;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  opacity: 0;
  padding: 10px;
  position: absolute;
  text-align: right;
  text-shadow: 0 0 4px #000;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
  width: 100%;
}

<div
  className="c0"
/>
`;
